--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Warehouse">
     <meta property="og:title" content="Warehouse - Save your data storage here.">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://rti30.github.io/rtom1/">
     <meta property="og:locale" content="en">
     <meta property="og:image" content="img/preview/1.svg">
     <meta property="og:image:width" content="885">
