html valid completed

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                     <div class="main-block__preview preview">
                         <h1 class="preview__title title">Save your data storage here.</h1>
                         <div class="preview__img"><img src="img/preview/1.svg" alt="Save your data storage here."></div>
-                        <div preview class="preview__text text-sp-attention">Data Warehouse is a data storage area that
-                            has been
-                            tested for security, so you can store your data here
-                            safely but not be afraid of being stolen by others.</div>
-                        <button type="button" class="preview__button"><a href="#about">Learn more</a></button>
+                        <div class="preview__text text-sp-attention">Data Warehouse is a data storage area that
+                            has been tested for security, so you can store your data here safely but not be afraid of
+                            being stolen by others.
+                        </div>
+                        <span class="preview__button"><a href="#about">Learn more</a></span>
                     </div>
                 </div>
             </section>
             <section class="about">
-                <a name="about"></a>
+                <a id="about"></a>
                 <div class="content-width">
                     <div class="about__body">
                         <div class="about__img"><img src="img/about/1.svg" alt=""></div>
@@ -63,7 +63,7 @@
                 </div>
             </section>
             <section class="features">
-                <a name="features"></a>
+                <a id="features"></a>
                 <div class="content-width">
                     <h2 class="features__title sub-title">Features</h2>
                     <div class="features__description text-sp-attention">Some of the features and advantages that we
@@ -197,7 +197,7 @@
             </section>
         </div>
         <footer class="footer">
-            <a name="help"></a>
+            <a id="help"></a>
             <div class="content-width">
                 <div class="footer__body">
                     <div class="footer__header">
