--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Warehouse - Save your data storage here.">
     <meta property="og:url" content="https://rti30.github.io/rtom1/">
     <meta property="og:locale" content="en">
-    <meta property="og:image" content="img/preview/1.svg">
+    <meta property="og:image" content="img/preview/1.png">
     <meta property="og:image:width" content="885">
     <meta property="og:image:height" content="468">
     <link rel="stylesheet" href="styles/null.css">
