fixed footer social link, img

--- a/index.html
+++ b/index.html
@@ -217,9 +217,12 @@
                     <div class="footer__social">
                         <div class="footer__subtitle">Social Media</div>
                         <ul class="footer__social-links">
-                            <li><img src="img/social/social.svg" alt="social icon"></li>
-                            <li><img src="img/social/social.svg" alt="social icon"></li>
-                            <li><img src="img/social/social.svg" alt="social icon"></li>
+                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            </li>
+                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            </li>
+                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer__rights">
