--- a/index.html
+++ b/index.html
@@ -217,11 +217,13 @@
                     <div class="footer__social">
                         <div class="footer__subtitle">Social Media</div>
                         <ul class="footer__social-links">
-                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            <li class="footer__social-link"><a><img src="img/social/facebooksvg.svg"
+                                        alt="social icon"></a>
                             </li>
-                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            <li class="footer__social-link"><a><img src="img/social/twitter.svg" alt="social icon"></a>
                             </li>
-                            <li class="footer__social-link"><a><img src="img/social/social.svg" alt="social icon"></a>
+                            <li class="footer__social-link"><a><img src="img/social/instagram.svg"
+                                        alt="social icon"></a>
                             </li>
                         </ul>
                     </div>
