--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <div class="content-width">
                     <header class="main-block__header header">
                         <div class="header__logo logo"><img src="img/logo.svg" alt=""></div>
-                        <ul class="header__menu">
-                            <li tabindex="1" class="header__link header__link--active"><a href="#about">About</a></li>
-                            <li tabindex="2" class="header__link"><a href="#help">Help</a></li>
-                            <li tabindex="3" class="header__link"><a href="#features">Features</a></li>
-                        </ul>
+                        <nav class="header__menu">
+                            <a href="#about" tabindex="1" class="header__link header__link--active">About</a>
+                            <a href="#help" tabindex="2" class="header__link">Help</a>
+                            <a href="#features" tabindex="3" class="header__link">Features</a>
+                        </nav>
                     </header>
                     <div class="main-block__preview preview">
                         <h1 class="preview__title title">Save your data storage here.</h1>
