переделал карточку слайдера

--- a/index.html
+++ b/index.html
@@ -151,30 +151,36 @@
                                     <div class="cllient__info">
                                         <div class="cllient__name">John Fang</div>
                                         <div class="cllient__link"><a href="wordfaang.com">wordfaang.com</a></div>
+                                        <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
+                                            Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu
+                                            pulvinar
+                                            aenean nam laoreet nulla.</div>
                                     </div>
-                                    <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
-                                        Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
-                                        aenean nam laoreet nulla.</div>
+
                                 </div>
                                 <div class="slider__slide slider__slide--next testimonials__client client">
-                                    <div class="cllient__icon"><img src="img/testimonials/1.svg" alt="John Fang"></div>
+                                    <div class="cllient__icon"><img src="img/testimonials/2.svg" alt="Jeny Doe"></div>
                                     <div class="cllient__info">
-                                        <div class="cllient__name">John Fang</div>
-                                        <div class="cllient__link"><a href="wordfaang.com">wordfaang.com</a></div>
+                                        <div class="cllient__name">Jeny Doe</div>
+                                        <div class="cllient__link"><a href="">UX Engineer</a></div>
+                                        <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
+                                            Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu
+                                            pulvinar
+                                            aenean nam laoreet nulla.</div>
                                     </div>
-                                    <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
-                                        Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
-                                        aenean nam laoreet nulla.</div>
+
                                 </div>
                                 <div class="slider__slide slider__slide--next testimonials__client client">
-                                    <div class="cllient__icon"><img src="img/testimonials/1.svg" alt="John Fang"></div>
+                                    <div class="cllient__icon"><img src="img/testimonials/3.svg" alt="William"></div>
                                     <div class="cllient__info">
-                                        <div class="cllient__name">John Fang</div>
-                                        <div class="cllient__link"><a href="wordfaang.com">wordfaang.com</a></div>
+                                        <div class="cllient__name">William</div>
+                                        <div class="cllient__link"><a href="">Web Designer</a></div>
+                                        <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
+                                            Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu
+                                            pulvinar
+                                            aenean nam laoreet nulla.</div>
                                     </div>
-                                    <div class="cllient__review text">Suspendisse ultrices at diam lectus nullam.
-                                        Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
-                                        aenean nam laoreet nulla.</div>
+
                                 </div>
                             </div>
                             <div class="slide__controllers">
