--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <meta property="og:image" content="img/preview/1.png">
     <meta property="og:image:width" content="885">
     <meta property="og:image:height" content="468">
-    <link rel="stylesheet" href="styles/null.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
