--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <meta property="og:title" content="Warehouse - Save your data storage here.">
     <meta property="og:url" content="https://rti30.github.io/rtom1/">
     <meta property="og:locale" content="en">
-    <meta property="og:image" content="img/preview/1.png">
+    <meta property="og:image:secure_url" content="img/preview/1.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="885">
     <meta property="og:image:height" content="468">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-
     <div class="wrapper">
         <div class="page">
-            <section class="main-block">
+            <div class="main-block">
                 <div class="content-width">
                     <header class="main-block__header header">
                         <div class="header__logo logo"><img src="img/logo.svg" alt=""></div>
@@ -36,7 +36,7 @@
                             <a href="#features" tabindex="3" class="header__link">Features</a>
                         </nav>
                     </header>
-                    <div class="main-block__preview preview">
+                    <section class="main-block__preview preview">
                         <h1 class="preview__title title">Save your data storage here.</h1>
                         <div class="preview__img"><img src="img/preview/1.svg" alt="Save your data storage here."></div>
                         <div class="preview__text text-sp-attention">Data Warehouse is a data storage area that
@@ -44,9 +44,9 @@
                             being stolen by others.
                         </div>
                         <span class="preview__button"><a href="#about">Learn more</a></span>
-                    </div>
+                    </section>
                 </div>
-            </section>
+            </div>
             <section class="about">
                 <a id="about"></a>
                 <div class="content-width">
