--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Warehouse - Save your data storage here.">
     <meta property="og:url" content="https://rti30.github.io/rtom1/">
     <meta property="og:locale" content="en">
-    <meta property="og:image:secure_url" content="https://i.ibb.co/KbqZ6Y4/1.jpg" />
+    <meta property="og:image" content="https://i.ibb.co/KbqZ6Y4/1.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="885">
     <meta property="og:image:height" content="468">
