--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     </section>
                 </div>
             </div>
-            <section class="about">
-                <a id="about"></a>
+            <section id="about" class="about">
                 <div class="content-width">
                     <div class="about__body">
                         <div class="about__img"><img src="img/about/1.svg" alt=""></div>
@@ -61,8 +60,7 @@
                     </div>
                 </div>
             </section>
-            <section class="features">
-                <a id="features"></a>
+            <section id="features" class="features">
                 <div class="content-width">
                     <h2 class="features__title sub-title">Features</h2>
                     <div class="features__description text-sp-attention">Some of the features and advantages that we
@@ -138,7 +136,6 @@
                     </div>
                 </div>
             </section>
-
             <section class="testimonials">
                 <div class="content-width">
                     <div class="testimonials__body">
@@ -201,8 +198,7 @@
                 </div>
             </section>
         </div>
-        <footer class="footer">
-            <a id="help"></a>
+        <footer id="help" class="footer">
             <div class="content-width">
                 <div class="footer__body">
                     <div class="footer__header">
