--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="fav.ico">
     <title>Warehouse - Save your data storage here.</title>
     <meta name="description" content="Data Warehouse is a data storage area that has been
@@ -25,11 +25,11 @@
 
 <body>
     <div class="wrapper">
-        <div class="page">
+        <main class="page">
             <div class="main-block">
                 <div class="content-width">
                     <header class="main-block__header header">
-                        <div class="header__logo logo"><img src="img/logo.svg" alt=""></div>
+                        <div class="header__logo logo"><img src="img/logo.svg" alt="logo"></div>
                         <nav class="header__menu">
                             <a href="#about" tabindex="1" class="header__link header__link--active">About</a>
                             <a href="#help" tabindex="2" class="header__link">Help</a>
@@ -50,7 +50,7 @@
             <section id="about" class="about">
                 <div class="content-width">
                     <div class="about__body">
-                        <div class="about__img"><img src="img/about/1.svg" alt=""></div>
+                        <div class="about__img"><img src="img/about/1.svg" alt="We are a high-level storage bank"></div>
                         <h2 class="about__title sub-title">We are a high-level data storage bank</h2>
                         <div class="about__text text-sp-attention">The place to store various data that you can access
                             at any time through the internet and where you can carry it.
@@ -68,11 +68,11 @@
                         for those of you
                         who store data in this Data Warehouse.</div>
                     <div class="features__table features-table">
-
                         <div class="features-table__card">
-                            <div class="features-table__bg"><img src="img/features/12.svg" alt=""></div>
+                            <div class="features-table__bg"><img src="img/features/12.svg"
+                                    alt="transparent blue background"></div>
                             <div class="features-table__row">
-                                <div class="features-table__img"><img src="img/features/1.svg" alt=""></div>
+                                <div class="features-table__img"><img src="img/features/1.svg" alt="Search Data"></div>
                                 <div class="features-table__body">
                                     <h3 class="features-table__title">Search Data</h3>
                                     <div class="features-table__text text">Don’t worry if your data is very large, the
@@ -87,9 +87,11 @@
                             </div>
                         </div>
                         <div class="features-table__card">
-                            <div class="features-table__bg"><img src="img/features/22.svg" alt=""></div>
+                            <div class="features-table__bg"><img src="img/features/22.svg"
+                                    alt="transparent pink background"></div>
                             <div class="features-table__row">
-                                <div class="features-table__img"><img src="img/features/2.svg" alt=""></div>
+                                <div class="features-table__img"><img src="img/features/2.svg" alt="24 Hours Access">
+                                </div>
                                 <div class="features-table__body">
                                     <h3 class="features-table__title">24 Hours Access</h3>
                                     <div class="features-table__text text">Access is given 24 hours a full morning to
@@ -103,9 +105,10 @@
                             </div>
                         </div>
                         <div class="features-table__card">
-                            <div class="features-table__bg"><img src="img/features/32.svg" alt=""></div>
+                            <div class="features-table__bg"><img src="img/features/32.svg"
+                                    alt="transparent blue background"></div>
                             <div class="features-table__row">
-                                <div class="features-table__img"><img src="img/features/3.svg" alt=""></div>
+                                <div class="features-table__img"><img src="img/features/3.svg" alt="Print Out"></div>
                                 <div class="features-table__body">
                                     <h3 class="features-table__title">Print Out</h3>
                                     <div class="features-table__text text">Print out service gives you convenience if
@@ -118,9 +121,11 @@
                             </div>
                         </div>
                         <div class="features-table__card">
-                            <div class="features-table__bg"><img src="img/features/42.svg" alt=""></div>
+                            <div class="features-table__bg"><img src="img/features/42.svg"
+                                    alt="transparent pink background"></div>
                             <div class="features-table__row">
-                                <div class="features-table__img"><img src="img/features/4.svg" alt=""></div>
+                                <div class="features-table__img"><img src="img/features/4.svg" alt="Security Code">
+                                </div>
                                 <div class="features-table__body">
                                     <h3 class="features-table__title">Security Code</h3>
                                     <div class="features-table__text text">Data Security is one of our best facilities.
@@ -197,19 +202,19 @@
                     </div>
                 </div>
             </section>
-        </div>
+        </main>
         <footer id="help" class="footer">
             <div class="content-width">
                 <div class="footer__body">
                     <div class="footer__header">
-                        <div class="footer__logo logo"><img src="img/logo.svg" alt=""></div>
+                        <div class="footer__logo logo"><img src="img/logo.svg" alt="logo"></div>
                         <div class="footer__title">DataWarehouse</div>
                     </div>
                     <div class="footer__info">
-                        <div class="footer__adress">
+                        <address class="footer__adress">
                             <p>Warehouse Society, 234</p>
                             <p>Bahagia Ave Street PRBW 29281</p>
-                        </div>
+                        </address>
                         <div class="footer__emaill">
                             <p>info@warehouse.project</p>
                             <p>1-232-3434 (Main)</p>
